--- a/app/www/interview.html
+++ b/app/www/interview.html
@@ -1,4 +1,4 @@
-<div class="col-sm-12 no-padding" ng-if="header != '' && subjectType == 'NETWORK'" ng-bind-html="header">{{ header }}
+<div class="col-xs-12 no-padding" ng-if="header != '' && subjectType == 'NETWORK'" ng-bind-html="header">{{ header }}
 </div>
 
 <div id="visualizePlugin" ng-if="subjectType == 'NETWORK' && (graphExpressionId > 0 || starExpressionId > 0 )" class="col-sm-6 pull-right">
@@ -26,7 +26,7 @@
     </div>
 </div>
 
-<div ng-class="{'col-xs-12 col-sm-9': questions[0].ANSWERTYPE == 'NAME_GENERATOR'}">
+<div ng-class="{'col-xs-12 col-sm-12 mb-5': questions[0].ANSWERTYPE == 'NAME_GENERATOR'}">
     <div id="floatHeader">
         <div class="col-sm-12 no-padding" ng-if="header != '' && subjectType != 'NETWORK'" ng-bind-html="header">
             {{ header }}
@@ -44,7 +44,7 @@
             <a ng-if='audio["ALTERPROMPT"]' class="play-sound" ng-click='playSound("ALTERPROMPT")' href="javascript:void(0)"><span class="fui-volume"></span></a>
             <form ng-if="!questions[0].MAXLITERAL || keys(nGalters).length < questions[0].MAXLITERAL" id="alterForm" name="alterForm" ng-submit="addAlter(alterForm.$valid)" novalidate>
                 <input name="YII_CSRF_TOKEN" value='{{ csrf }}' type="hidden">
-                <div class="form-group">
+                <div class="form-group ">
                     <input class="answerInput" name="Alters[name]" id="Alters_name" type="text" value="{{ alterName }}" style="float:left" ng-if="questions[0].AUTOCOMPLETELIST != true">
                     <div ng-if="questions[0].AUTOCOMPLETELIST == true">
                         <input name="Alters[name]" id="Alters_name" type="hidden" value="{{ alterName }}">
@@ -54,7 +54,7 @@
                     <input value="{{ questions[0].ID }}" name="Alters[nameGenQIds]" id="Alters_nameGenQIds" type="hidden">
                     <input value="{{ nGalters.length }}" name="Alters[ordering]" id="Alters_ordering" type="hidden">
 
-                    <input class="btn orangebutton alterSubmit" type="submit" name="yt0" value="+ Add">
+                    <input class="btn orangebutton alterSubmit mt-3" type="submit" name="yt0" value="+ Añadir">
                 </div>
                 <div ng-class="{'col-sm-12 table-cell': questions[0].ANSWERTYPE == 'NAME_GENERATOR'}" ng-repeat="option in options[questions[0].array_id]" ng-class="{'bg-danger':answerForm.$submitted && errors[questions[0].array_id]}" ng-if="(questions[0].ANSWERTYPE == 'NAME_GENERATOR' && keys(nGalters).length < questions[0].MAXLITERAL)">
                     <input id="multiselect-{{ questions[0].array_id }}_{{ $index }}" class="answerInput" ng-disabled="interview.COMPLETED == -1" ng-model="option.checked" type="checkbox" ng-change="multiSelect('{{ option.ID }}', '{{$index}}', '{{questions[0].array_id}}')">
@@ -72,46 +72,47 @@
             </form>
         </div>
     </div>
+    <div id="alterListBox" class="col-xs-12 col-sm-12 mb-5" ng-if="questions[0].ANSWERTYPE == 'NAME_GENERATOR'">
+        <span class="name-title">Nombres</span>
+        <table class="items" width="100%">
+            <tbody>
+                <tr class="multi" ng-repeat="alter in nGalters track by $index">
+                    <td style="width:25px;" id="ordering">{{ $index + 1 }}</td>
+                    <td style="width:auto;">{{ alter.NAME }}</td>
+                    <td style="width:25px;"><a class="alter-delete" title="Delete" ng-click="removeAlter(alter.ID, questions[0].ID)"><span class="fui-cross"></span></a></td>
+                </tr>
+            </tbody>
+        </table>
+        <div ng-if='keys(nGalters).length == 0'>
+            <br>
+        </div>
+        <div ng-if='keys(listedAlters).length > 0' class="prev-alters">
+            <span class="name-title">Listed Names</span>
+            <div ng-repeat="pAlter in listedAlters">
+                <label>{{ pAlter.NAME }}</label><br>
+            </div>
+        </div>
+        <div ng-if='keys(prevAlters).length > 0 && showPrevAlters' class="prev-alters">
+            <span class="name-title">Previous Names</span>
+            <div ng-repeat="pAlter in prevAlters">
+                <label>{{ pAlter.NAME }}</label><br>
+            </div>
+        </div>
+    </div>
 </div>
 
-<div id="alterListBox" class="col-xs-12 col-sm-3" ng-if="questions[0].ANSWERTYPE == 'NAME_GENERATOR'">
-    <span class="name-title">Names</span>
-    <table class="items" width="100%">
-        <tbody>
-            <tr class="multi" ng-repeat="alter in nGalters track by $index">
-                <td style="width:25px;" id="ordering">{{ $index + 1 }}</td>
-                <td style="width:auto;">{{ alter.NAME }}</td>
-                <td style="width:25px;"><a class="alter-delete" title="Delete" ng-click="removeAlter(alter.ID, questions[0].ID)"><span class="fui-cross"></span></a></td>
-            </tr>
-        </tbody>
-    </table>
-    <div ng-if='keys(nGalters).length == 0'>
-        <br>
-    </div>
-    <div ng-if='keys(listedAlters).length > 0' class="prev-alters">
-        <span class="name-title">Listed Names</span>
-        <div ng-repeat="pAlter in listedAlters">
-            <label>{{ pAlter.NAME }}</label><br>
-        </div>
-    </div>
-    <div ng-if='keys(prevAlters).length > 0 && showPrevAlters' class="prev-alters">
-        <span class="name-title">Previous Names</span>
-        <div ng-repeat="pAlter in prevAlters">
-            <label>{{ pAlter.NAME }}</label><br>
-        </div>
-    </div>
-</div>
+
 <form id="answerForm" name="answerForm" ng-submit="submitForm(answerForm.$valid)" novalidate>
 
     <table id="qTable" ng-class="{qTable: askingStyleList != false}" ng-if="askingStyleList != false">
         <thead>
-            <div id="realHeader" ng-if="prompt != ''" style="padding-top:10px">
+            <div style="display: none" id="realHeader" ng-if="prompt != ''" style="padding-top:10px">
                 <td id="promptHeader" colspan={{colspan}} ng-bind-html="prompt">{{ prompt }}<br>
             </div>
             <tr class="panel multi multi-header" ng-if="askingStyleList != false && questions[0].SUBJECTTYPE != 'PREFACE'"">
                 <td style="min-width:180px"></td>
                 <td ng-if="(answerType == 'TEXTUAL' || answerType == 'NUMERICAL') && askingStyleList != false" style="width:{{ fixedWidth }}"></td>
-                <td ng-repeat="option in options[askingStyleList]">{{ option.NAME }}</td>
+                <td style="display: {{option.NAME !== 'Refuse'?true: 'none'}}"ng-repeat="option in options[askingStyleList]">{{ option.NAME }}</td>
             </tr>
         </thead>
         <tbody>
@@ -256,7 +257,7 @@
                 <input question="{{ question.TITLE }}" class="answerInput" ng-disabled="interview.COMPLETED == -1" ng-if="question.USEALTERLISTFIELD != 'name'&& question.USEALTERLISTFIELD != 'email'" ng-change="unSkip('{{question.array_id}}')" id="Answer_{{ question.array_id }}_VALUE" name="Answer[{{ question.array_id }}][value]" ng-model="answers[question.array_id].VALUE" check-answer question-id='{{ question.ID }}' array-id='{{ question.array_id }}' answer-type='{{ question.ANSWERTYPE }}'>
             </div>
             <td ng-class="{'col-sm-9': questions[0].ANSWERTYPE == 'NAME_GENERATOR'}" ng-repeat="option in options[question.array_id]" ng-class="{'bg-danger':answerForm.$submitted && errors[question.array_id]}" ng-if="question.ASKINGSTYLELIST ==  true && (question.ANSWERTYPE != 'NAME_GENERATOR' && (question.ANSWERTYPE == 'MULTIPLE_SELECTION' || options[question.array_id]))" style="clear:both">
-                <input id="multiselect-{{question.array_id}}_{{ $index }}" class="answerInput" ng-disabled="interview.COMPLETED == -1" ng-model="option.checked" type="checkbox" ng-change="multiSelect('{{ option.ID }}', '{{$index}}', '{{question.array_id}}')">
+                <input style="display: {{ option.NAME !== 'Refuse' ? true: 'none'}}" id="multiselect-{{question.array_id}}_{{ $index }}" class="answerInput" ng-disabled="interview.COMPLETED == -1" ng-model="option.checked" type="checkbox" ng-change="multiSelect('{{ option.ID }}', '{{$index}}', '{{question.array_id}}')">
                 <label ng-show="question.ASKINGSTYLELIST == false || !question.ASKINGSTYLELIST" for="multiselect-{{question.array_id}}_{{ $index }}">{{ option.NAME }}</label>
                 <input ng-if="(otherSpecify[question.array_id][option.ID] === '' || otherSpecify[question.array_id][option.ID] != false)" ng-show="option.checked" ng-model="otherSpecify[question.array_id][option.ID]" ng-change="changeOther(question.array_id)">
                 <a ng-if='audio["OPTION" + option.ID]' class="play-sound" ng-click='playSound("OPTION" + option.ID)' href="javascript:void(0)"><span class="fui-volume"></span></a>
@@ -307,7 +308,7 @@
             <div ng-if="askingStyleList == false && (question.ANSWERTYPE == 'TEXTUAL' || question.ANSWERTYPE == 'NUMERICAL' || question.ANSWERTYPE == 'STORED_VALUE' || question.ANSWERTYPE == 'RANDOM_NUMBER')">
                 <input ng-if="question.AUTOCOMPLETELIST == true" name="Answer[{{ question.array_id }}][value]" value="{{answers[question.array_id].VALUE}}" type="hidden" id="Answer_{{ question.array_id }}_VALUE">
                 <autocomplete attr-input-class="answerInput" ng-disabled="interview.COMPLETED == -1" ng-if="question.AUTOCOMPLETELIST == true" name="Answer[{{ question.array_id }}][value]" ng-model="answers[question.array_id].VALUE" data="participants" check-answer question-id='{{ question.ID }}' array-id='{{ question.array_id }}' answer-type='{{ question.ANSWERTYPE }}'></autocomplete>
-                <input question="{{ question.TITLE }}" class="answerInput" ng-disabled="interview.COMPLETED == -1" ng-if="question.AUTOCOMPLETELIST != true" ng-change="unSkip('{{question.array_id}}')" id="Answer_{{ question.array_id }}_VALUE" name="Answer[{{ question.array_id }}][value]" ng-model="answers[question.array_id].VALUE" check-answer question-id='{{ question.ID }}' array-id='{{ question.array_id }}' answer-type='{{ question.ANSWERTYPE }}'>
+                <input type="{{ question.TITLE === 'edad'? 'number': null }}"  question="{{ question.TITLE }}" class="answerInput" ng-disabled="interview.COMPLETED == -1" ng-if="question.AUTOCOMPLETELIST != true" ng-change="unSkip('{{question.array_id}}')" id="Answer_{{ question.array_id }}_VALUE" name="Answer[{{ question.array_id }}][value]" ng-model="answers[question.array_id].VALUE" check-answer question-id='{{ question.ID }}' array-id='{{ question.array_id }}' answer-type='{{ question.ANSWERTYPE }}'>
             </div>
             <div ng-if="question.ANSWERTYPE == 'TEXTUAL_PP'" class="row form-group col-sm-6">
                 <textarea question="{{ question.TITLE }}" class="answerInput" ng-disabled="interview.COMPLETED == -1" ng-change="unSkip('{{question.array_id}}')" id="Answer_{{ question.array_id }}_VALUE" name="Answer[{{ question.array_id }}][value]" ng-model="answers[question.array_id].VALUE" check-answer question-id='{{ question.ID }}' array-id='{{ question.array_id }}' answer-type='{{ question.ANSWERTYPE }}'></textarea>
@@ -441,8 +442,8 @@
             </div>
 
             <div ng-class="{'col-sm-9': questions[0].ANSWERTYPE == 'NAME_GENERATOR'}" ng-repeat="option in options[question.array_id]" ng-class="{'bg-danger':answerForm.$submitted && errors[question.array_id]}" ng-if=" ((question.ANSWERTYPE == 'MULTIPLE_SELECTION' || options[question.array_id]))" style="clear:both">
-                <input id="multiselect-{{question.array_id}}_{{ $index }}" class="answerInput" ng-disabled="interview.COMPLETED == -1" ng-model="option.checked" type="checkbox" ng-change="multiSelect('{{ option.ID }}', '{{$index}}', '{{question.array_id}}')">
-                <label ng-show="question.ASKINGSTYLELIST == false || !question.ASKINGSTYLELIST" for="multiselect-{{question.array_id}}_{{ $index }}">{{ option.NAME }}</label>
+                <input style="display: {{option.NAME !== 'Refuse' ? true: 'none'}} !important;" id="multiselect-{{question.array_id}}_{{ $index }}" class="answerInput" ng-disabled="interview.COMPLETED == -1" ng-model="option.checked" type="checkbox" ng-change="multiSelect('{{ option.ID }}', '{{$index}}', '{{question.array_id}}')">
+                <label style="display: {{option.NAME !== 'Refuse' ? true: 'none'}} !important;" ng-show="question.ASKINGSTYLELIST == false || !question.ASKINGSTYLELIST" for="multiselect-{{question.array_id}}_{{ $index }}">{{ option.NAME }}</label>
                 <input ng-if="(otherSpecify[question.array_id][option.ID] === '' || otherSpecify[question.array_id][option.ID] != false)" ng-show="option.checked" ng-model="otherSpecify[question.array_id][option.ID]" ng-change="changeOther(question.array_id)">
                 <a ng-if='audio["OPTION" + option.ID]' class="play-sound" ng-click='playSound("OPTION" + option.ID)' href="javascript:void(0)"><span class="fui-volume"></span></a>
                 <br>
@@ -473,12 +474,12 @@
     <input name="hashKey" value='{{ hashKey }}' type="hidden">
     <input ng-if="conclusion == true" name="conclusion" value='1' type="hidden">
 
-    <div class="form-group clear-left btn-top">
-        <button ng-if="page > 0 && questions[0].ANSWERTYPE != 'CONCLUSION'" id="back" class='btn graybutton' ng-click="goBack();" onclick="return false;">Back</button>
-        <button ng-if="(questions[0].ANSWERTYPE != 'CONCLUSION' && conclusion == false) || (questions[0].ANSWERTYPE == 'NAME_GENERATOR' && conclusion == true)" id="next" class='btn orangebutton' type="submit">Next</button>
-        <button ng-if="questions[0].ANSWERTYPE == 'CONCLUSION' && redirect != false" id="next" class='btn orangebutton' type="submit">Return</button>
-        <button ng-if="questions[0].ANSWERTYPE != 'NAME_GENERATOR' && conclusion == true && redirect == false" id="next" class='btn orangebutton' type="submit">Finish</button>
-        <button ng-if="questions[0].ANSWERTYPE != 'NAME_GENERATOR' && conclusion == true && redirect != false" id="next" class='btn orangebutton' type="submit">Next</button>
+    <div class="form-group clear-left btn-top mt-5">
+        <button ng-if="page > 0 && questions[0].ANSWERTYPE != 'CONCLUSION'" id="back" class='btn graybutton' ng-click="goBack();" onclick="return false;">Atrás</button>
+        <button ng-if="(questions[0].ANSWERTYPE != 'CONCLUSION' && conclusion == false) || (questions[0].ANSWERTYPE == 'NAME_GENERATOR' && conclusion == true)" id="next" class='btn orangebutton' type="submit">Siguiente</button>
+        <button ng-if="questions[0].ANSWERTYPE == 'CONCLUSION' && redirect != false" id="next" class='btn orangebutton' type="submit">Volver</button>
+        <button ng-if="questions[0].ANSWERTYPE != 'NAME_GENERATOR' && conclusion == true && redirect == false" id="next" class='btn orangebutton' type="submit">Finalizar</button>
+        <button ng-if="questions[0].ANSWERTYPE != 'NAME_GENERATOR' && conclusion == true && redirect != false" id="next" class='btn orangebutton' type="submit">Siguiente</button>
     </div>
 </form>
 <div class="col-sm-12" ng-if="footer != ''" ng-bind-html="footer">{{ footer }}</div>
